--- a/pages/contact.css
+++ b/pages/contact.css
@@ -53,6 +53,7 @@
 }
 
 .contact h2 {
+    margin-top: 40px;
     font-size: 2.5rem;
     color: #007BFF;
     margin-bottom: 10px;
@@ -149,4 +150,8 @@ footer {
 footer p {
     margin: 0;
     font-size: 16px;
+}
+#navbar{
+    position: fixed;
+    width: 100%;
 }
