--- a/pages/hospitals.css
+++ b/pages/hospitals.css
@@ -54,6 +54,7 @@
 }
 
 .hospital-list h2 {
+    margin-top: 40px;
     font-size: 2.5rem;
     color: #007BFF;
     margin-bottom: 15px;
@@ -102,4 +103,8 @@ footer {
 footer p {
     margin: 0;
     font-size: 16px;
+}
+#navbar{
+    position: fixed;
+    width: 100%;
 }
