--- a/pages/portofolio.css
+++ b/pages/portofolio.css
@@ -54,6 +54,7 @@
 }
 
 .portfolio h2 {
+    margin-top: 40px;
     font-size: 2.5rem;
     color: #007BFF;
     margin-bottom: 10px;
@@ -117,4 +118,7 @@ footer p {
     margin: 0;
     font-size: 16px;
 }
-
+#navbar{
+    position: fixed;
+    width: 100%;
+}
