--- a/pages/services.css
+++ b/pages/services.css
@@ -43,14 +43,18 @@
 .navbar ul li a:hover{
     background-color: aqua;
 }
+
+
 .services {
     padding: 40px 20px;
     max-width: 1000px;
+    /* margin-top: 100px; */
     margin: 0 auto;
     text-align: center;
 }
 
 .services h2 {
+    margin-top: 40px;
     font-size: 2.5rem;
     color: #007BFF;
     margin-bottom: 10px;
@@ -100,4 +104,9 @@ footer {
 footer p {
     margin: 0;
     font-size: 16px;
+}
+#navbar{
+    position: fixed;
+    width: 100%;
+    margin-top: 0;
 }
